--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "hashinal-wc",
-  "version": "1.0.0",
-  "description": "Hashinal Wallet Connect SDK",
+  "name": "@hashgraphonline/hashinal-wc",
+  "version": "1.0.4",
+  "description": "The official Hashinal Wallet Connect SDK. A set of easy-to-use functions to interact with Hedera through Wallet Connect.",
   "type": "module",
   "files": [
     "dist"
   ],
-  "main": "./dist/hedera-wallet-connect-sdk.js",
+  "main": "./dist/umd/hashinal-wc.umd.js",
+  "module": "./dist/es/hashinal-wc.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/es/hashinal-wc.es.js",
+      "require": "./dist/umd/hashinal-wc.umd.js"
+    }
+  },
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "vite build"
+    "clean": "rimraf dist",
+    "build:es": "BUILD_FORMAT=es vite build && tsc --emitDeclarationOnly",
+    "build:umd": "BUILD_FORMAT=umd vite build",
+    "build": "npm run clean && npm run build:umd && npm run build:es",
+    "pub": "npm publish --access public"
   },
   "dependencies": {
     "@hashgraph/hedera-wallet-connect": "^1.3.2",
@@ -18,7 +29,8 @@
     "@walletconnect/modal": "^2.6.2",
     "@walletconnect/qrcode-modal": "^1.8.0",
     "@walletconnect/types": "^2.14",
-    "@walletconnect/utils": "^2.14.0"
+    "@walletconnect/utils": "^2.14.0",
+    "vite-plugin-string-replace": "^1.1.3"
   },
   "devDependencies": {
     "@types/node": "^22.2.0",
@@ -30,6 +42,7 @@
     "node-stdlib-browser": "^1.2.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
+    "rimraf": "^5.0.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "ts-loader": "^9.5.1",
