--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
+    "rootDir": "./src/",
     "noImplicitAny": true,
     "module": "es6",
     "target": "es5",
@@ -8,7 +9,10 @@
     "allowJs": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "lib": ["es2015", "dom"]
+    "lib": ["es2015", "dom"],
+    "types": ["./src/types.d.ts"],
+    "declaration": true,
+    "emitDeclarationOnly": true
   },
   "include": ["src/**/*"]
 }
