--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hashgraphonline/hashinal-wc",
-  "version": "1.0.55",
+  "version": "1.0.57",
   "description": "The official Hashinal Wallet Connect SDK. A set of easy-to-use functions to interact with Hedera through Wallet Connect.",
   "type": "module",
   "files": [
@@ -17,19 +17,23 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "rimraf dist",
-    "build:es": "BUILD_FORMAT=es vite build && tsc --emitDeclarationOnly",
+    "build:es": "BUILD_FORMAT=es vite build",
     "build:umd": "BUILD_FORMAT=umd vite build",
-    "build": "npm run clean && npm run build:umd && npm run build:es",
+    "build": "npm run clean && npm run build:umd && npm run build:es && npm run build:ts",
+    "build:ts": "tsc --emitDeclarationOnly --project tsconfig.json",
     "pub": "npm publish --access public"
   },
   "dependencies": {
     "@hashgraph/hedera-wallet-connect": "^1.3.2",
     "@hashgraph/proto": "^2.15.0",
     "@hashgraph/sdk": "^2.50.0",
+    "@types/long": "^5.0.0",
     "@walletconnect/modal": "^2.6.2",
+    "@walletconnect/modal-core": "^2.6.2",
     "@walletconnect/qrcode-modal": "^1.8.0",
     "@walletconnect/types": "^2.15.1",
     "@walletconnect/utils": "^2.15.1",
+    "long": "^5.2.3",
     "vite-plugin-string-replace": "^1.1.3"
   },
   "devDependencies": {
