--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hashgraphonline/hashinal-wc",
-  "version": "1.0.58",
+  "version": "1.0.61",
   "description": "The official Hashinal Wallet Connect SDK. A set of easy-to-use functions to interact with Hedera through Wallet Connect.",
   "type": "module",
   "files": [
@@ -27,18 +27,22 @@
     "@hashgraph/hedera-wallet-connect": "^1.3.2",
     "@hashgraph/proto": "^2.15.0",
     "@hashgraph/sdk": "^2.50.0",
-    "@types/long": "^5.0.0",
     "@walletconnect/modal": "^2.6.2",
     "@walletconnect/modal-core": "^2.6.2",
     "@walletconnect/qrcode-modal": "^1.8.0",
-    "@walletconnect/types": "^2.15.1",
     "@walletconnect/utils": "^2.15.1",
+    "async-await-retry": "^2.1.0",
+    "fetch-retry": "^6.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "long": "^5.2.3",
     "vite-plugin-string-replace": "^1.1.3"
   },
   "devDependencies": {
+    "@types/isomorphic-fetch": "^0.0.39",
+    "@types/long": "^5.0.0",
     "@types/node": "^22.2.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@walletconnect/types": "^2.15.1",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
