--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hashgraphonline/hashinal-wc",
-  "version": "1.0.64",
+  "version": "1.0.65",
   "description": "The official Hashinal Wallet Connect SDK. A set of easy-to-use functions to interact with Hedera through Wallet Connect.",
   "type": "module",
   "files": [
@@ -10,8 +10,14 @@
   "module": "./dist/es/hashinal-wc.es.js",
   "exports": {
     ".": {
-      "import": "./dist/es/hashinal-wc.es.js",
-      "require": "./dist/umd/hashinal-wc.umd.js"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/es/hashinal-wc.es.js"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/umd/hashinal-wc.umd.js"
+      }
     }
   },
   "types": "./dist/index.d.ts",
