--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hashgraphonline/hashinal-wc",
-  "version": "1.0.68",
+  "version": "1.0.71",
   "description": "The official Hashinal Wallet Connect SDK. A set of easy-to-use functions to interact with Hedera through Wallet Connect.",
   "type": "module",
   "files": [
@@ -30,13 +30,14 @@
     "pub": "npm publish --access public"
   },
   "dependencies": {
-    "@hashgraph/hedera-wallet-connect": "^1.3.2",
+    "@hashgraph/hedera-wallet-connect": "1.3.4",
     "@hashgraph/proto": "^2.15.0",
-    "@hashgraph/sdk": "^2.51.0",
-    "@walletconnect/modal": "^2.6.2",
-    "@walletconnect/modal-core": "^2.6.2",
+    "@hashgraph/sdk": "^2.52.0",
+    "@walletconnect/core": "^2.17.1",
+    "@walletconnect/modal": "^2.7.0",
+    "@walletconnect/modal-core": "^2.7.0",
     "@walletconnect/qrcode-modal": "^1.8.0",
-    "@walletconnect/utils": "^2.16.2",
+    "@walletconnect/utils": "^2.17.1",
     "fetch-retry": "^6.0.0",
     "long": "^5.2.3"
   },
@@ -45,7 +46,7 @@
     "@types/long": "^5.0.0",
     "@types/node": "^22.2.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "@walletconnect/types": "^2.15.1",
+    "@walletconnect/types": "^2.17.1",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
