--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hashgraphonline/hashinal-wc",
-  "version": "1.0.72",
+  "version": "1.0.73",
   "description": "The official Hashinal Wallet Connect SDK. A set of easy-to-use functions to interact with Hedera through Wallet Connect.",
   "type": "module",
   "files": [
@@ -27,10 +27,11 @@
     "build:umd": "BUILD_FORMAT=umd vite build",
     "build": "npm run clean && npm run build:umd && npm run build:es && npm run build:ts",
     "build:ts": "tsc --emitDeclarationOnly --project tsconfig.json",
-    "pub": "npm publish --access public"
+    "pub": "npm publish --access public",
+    "pub-canary": "npm publish --access public --tag canary"
   },
   "dependencies": {
-    "@hashgraph/hedera-wallet-connect": "1.3.4",
+    "@hashgraph/hedera-wallet-connect": "1.3.7-canary.813a6d2.0",
     "@hashgraph/proto": "^2.15.0",
     "@hashgraph/sdk": "^2.52.0",
     "@walletconnect/core": "^2.17.1",
