chore: bump version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hashgraphonline/hashinal-wc",
-  "version": "1.0.85",
+  "version": "1.0.86",
   "description": "The official Hashinal Wallet Connect SDK. A set of easy-to-use functions to interact with Hedera through Wallet Connect.",
   "type": "module",
   "files": [
@@ -33,8 +33,8 @@
   },
   "dependencies": {
     "@hashgraph/proto": "^2.15.0",
-    "@hashgraph/sdk": "^2.53.0",
-    "@hashgraph/hedera-wallet-connect": "1.3.8-canary.a321e2e.0",
+    "@hashgraph/sdk": "^2.54.2",
+    "@hashgraph/hedera-wallet-connect": "1.4.2",
     "@walletconnect/core": "^2.17.2",
     "@walletconnect/modal": "^2.7.0",
     "@walletconnect/modal-core": "^2.7.0",
