--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "@hashgraphonline/hashinal-wc",
-  "version": "1.0.107",
+  "version": "1.0.119",
   "description": "The official Hashinal Wallet Connect SDK. A set of easy-to-use functions to interact with Hedera through Wallet Connect.",
   "type": "module",
   "files": [
     "dist"
   ],
   "license": "Apache-2.0",
-  "main": "./dist/umd/hashinal-wc.umd.js",
-  "module": "./dist/es/hashinal-wc.es.js",
+  "main": "./dist/cjs/hashinal-wc.cjs",
+  "module": "./dist/es/index.js",
   "exports": {
     ".": {
       "import": {
         "types": "./dist/index.d.ts",
-        "default": "./dist/es/hashinal-wc.es.js"
+        "default": "./dist/es/index.js"
       },
       "require": {
         "types": "./dist/index.d.ts",
-        "default": "./dist/umd/hashinal-wc.umd.js"
+        "default": "./dist/cjs/hashinal-wc.cjs"
       }
     }
   },
@@ -26,22 +26,22 @@
     "clean": "rimraf dist",
     "build:es": "BUILD_FORMAT=es vite build",
     "build:umd": "BUILD_FORMAT=umd vite build",
-    "build": "npm run clean && npm run build:umd && npm run build:es && npm run build:ts",
+    "build:cjs": "node scripts/generate-cjs-stub.mjs",
+    "build": "npm run clean && npm run build:umd && npm run build:es && npm run build:cjs && npm run build:ts",
     "build:ts": "tsc --emitDeclarationOnly --project tsconfig.json",
     "prepublish": "npm run build",
     "publish": "npm publish --access public",
     "publish:canary": "npm publish --access public --tag canary"
   },
   "dependencies": {
+    "@hashgraph/hedera-wallet-connect": "2.0.3",
     "@hashgraph/proto": "^2.22.0",
-    "@hashgraph/sdk": "^2.72.0",
-    "@hashgraph/hedera-wallet-connect": "1.5.1",
-    "@hashgraphonline/standards-sdk": "^0.1.108",
-    "@walletconnect/core": "^2.21.8",
-    "@walletconnect/modal": "^2.7.0",
-    "@walletconnect/modal-core": "^2.7.0",
-    "@walletconnect/qrcode-modal": "^1.8.0",
-    "@walletconnect/utils": "^2.21.8",
+    "@hashgraph/sdk": "^2.75.0",
+    "@hashgraphonline/standards-sdk": "0.1.121-canary.0",
+    "@reown/appkit": "1.8.9",
+    "@walletconnect/core": "^2.22.4",
+    "@walletconnect/universal-provider": "^2.22.4",
+    "@walletconnect/utils": "^2.22.4",
     "fetch-retry": "^6.0.0",
     "long": "^5.2.3"
   },
@@ -50,13 +50,13 @@
     "@types/isomorphic-fetch": "^0.0.39",
     "@types/long": "^5.0.0",
     "@types/node": "^22.2.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "@walletconnect/types": "^2.21.8",
+    "@vitejs/plugin-react": "^5.0.4",
+    "@walletconnect/types": "^2.22.4",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
-    "node-stdlib-browser": "^1.2.0",
+    "node-stdlib-browser": "^1.3.1",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "rimraf": "^5.0.0",
@@ -66,13 +66,15 @@
     "typescript": "^5.5.4",
     "url": "^0.11.4",
     "util": "^0.12.5",
-    "vite": "^5.4.0",
-    "vite-plugin-dts": "^4.2.2",
-    "vite-plugin-node-polyfills": "^0.22.0",
-    "vite-plugin-string-replace": "^1.1.3",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "vite": "^7.1.1",
+    "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-node-polyfills": "^0.24.0",
+    "vite-plugin-string-replace": "^1.1.5"
+  },
+  "resolutions": {
+    "@reown/appkit": "1.8.9",
+    "@hashgraph/hedera-wallet-connect": "2.0.3",
+    "@hashgraphonline/standards-sdk": "0.1.121-canary.0"
   },
   "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
 }
