--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hashgraphonline/hashinal-wc",
-  "version": "1.0.119",
+  "version": "2.0.4",
   "description": "The official Hashinal Wallet Connect SDK. A set of easy-to-use functions to interact with Hedera through Wallet Connect.",
   "type": "module",
   "files": [
@@ -34,14 +34,11 @@
     "publish:canary": "npm publish --access public --tag canary"
   },
   "dependencies": {
-    "@hashgraph/hedera-wallet-connect": "2.0.4-canary.3ca04e9.0",
-    "@hashgraph/proto": "^2.22.0",
-    "@hashgraph/sdk": "^2.75.0",
-    "@hashgraphonline/standards-sdk": "0.1.121-canary.0",
-    "@reown/appkit": "1.8.9",
-    "@walletconnect/core": "^2.22.4",
-    "@walletconnect/universal-provider": "^2.22.4",
-    "@walletconnect/utils": "^2.22.4",
+    "@hashgraph/hedera-wallet-connect": "2.0.4",
+    "@hashgraph/proto": "^2.24.0",
+    "@hashgraph/sdk": "^2.77.0",
+    "@hashgraphonline/standards-sdk": "0.1.141",
+    "@reown/appkit": "1.8.10",
     "fetch-retry": "^6.0.0",
     "long": "^5.2.3"
   },
@@ -51,7 +48,7 @@
     "@types/long": "^5.0.0",
     "@types/node": "^22.2.0",
     "@vitejs/plugin-react": "^5.0.4",
-    "@walletconnect/types": "^2.22.4",
+    "@walletconnect/types": "^2.23.1",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
@@ -72,9 +69,7 @@
     "vite-plugin-string-replace": "^1.1.5"
   },
   "resolutions": {
-    "@reown/appkit": "1.8.9",
-    "@hashgraph/hedera-wallet-connect": "2.0.4-canary.3ca04e9.0",
-    "@hashgraphonline/standards-sdk": "0.1.121-canary.0"
+    "@hashgraphonline/standards-sdk": "0.1.141"
   },
   "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
 }
