--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,6 +32,8 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           registry-url: https://registry.npmjs.org
+          scope: '@hashgraphonline'
+          always-auth: true
           cache: pnpm
 
       - name: Install dependencies
@@ -63,6 +65,8 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
           registry-url: https://registry.npmjs.org
+          scope: '@hashgraphonline'
+          always-auth: true
           cache: pnpm
 
       - name: Install dependencies
